Improved website page (im learning css)
Nice way to learn css (learn = google everything)

--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 
 <head>
     <title>Desmos 3D Renderer</title>
-    
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <html>
-    <div id = "calculator" style= "width: 1536px; height: 1024px; margin-left: auto; margin-right: auto;"></div>
+    <p class = "toptext">Desmos 3D Renderer!</p>
+
+    <p class = "githublink">
+        Check out the code at
+        <a href="https://github.com/stupidjuice/Desmos-3D-Renderer" target = _blank>
+            this GitHub repo
+        </a>
+    </p>
+
+    <div id = "calculator" class = "calculator"></div>
     <script src = "https://www.desmos.com/api/v1.7/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
     <script src = "main.js"></script>
 </html>
