--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html>
     <p class = "toptext">Desmos 3D Renderer!</p>
 
-    <p class = "githublink">
+    <p class = "smalltext">
         Check out the code at
         <a href="https://github.com/stupidjuice/Desmos-3D-Renderer" target = _blank>
             this GitHub repo
@@ -18,4 +18,6 @@
     <div id = "calculator" class = "calculator"></div>
     <script src = "https://www.desmos.com/api/v1.7/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
     <script src = "main.js"></script>
+    
+    <p></p>
 </html>
