changed default value of slider text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p class = "options">Options:</p>
         <p class = "option">Fill Opacity:
             <input type="range" min="0" max="100" value="100" class="slider" id="opacity">
-            <p1 id = "opacitytext">slider</p2>
+            <p1 id = "opacitytext">100%</p2>
         </p>
     </div>
     
