Added line thickness slider

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
             <input type="range" min="0" max="100" value="100" class="slider" id="opacity">
             <p1 id = "opacitytext">100%</p2>
         </p>
+
+        <p class = "option">Line Thickness:
+            <input type="range" min="1" max="10" value="1" class="slider" id="linethick">
+            <p1 id = "linethicktext">100%</p2>
+        </p>
     </div>
+
     
 </html>
