--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
 
         <p class = "option">Line Thickness:
             <input type="range" min="1" max="10" value="1" class="slider" id="linethick">
-            <p1 id = "linethicktext">100%</p2>
+            <p1 id = "linethicktext">1 pixels</p2>
+        </p>
+
+        <p class = "option">Label Vertices:
+            <input type="checkbox" id="labelverts" value="labelverts">
+            <p1>(WARNING: SLOW)</p1>
         </p>
     </div>
 
