Added ability to upload custom obj models

--- a/index.html
+++ b/index.html
@@ -35,5 +35,11 @@
             <input type="checkbox" id="labelverts" value="labelverts">
             <p1>(WARNING: SLOW)</p1>
         </p>
+        
+        <p class = "option">Upload Custom Model
+            <input type="file" id="uploadfile", name="uploadfile">
+            <p1>(See GitHub for details on how to export)</p1>
+        </p>
+
     </div>
 </html>
